--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <body style="background-color: #B9FFEF;">
         <h1 style="font-size: 45px;"> Lauren</h1>
-        <p> <img src="me.jpg" width="200" height="300"></p>
+        <p> <img src="me.JPG" width="200" height="300"></p>
         <p> Born in New Brunswick, NJ in 2004
             <br> I like to play field hockey and stage manage musicals.
             <br> I currently go to Syracuse University.
